fix align utility

--- a/src/utils/css/layout.css
+++ b/src/utils/css/layout.css
@@ -6,7 +6,7 @@
   margin-left: 1rem;
 }
 
-.d-center {
+.da-center {
   align-items: center;
   justify-content: center;
 }
